@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: axis.c,v 1.97.2.3 2012/11/08 17:13:08 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: axis.c,v 1.97.2.4 2013/05/23 01:09:53 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - axis.c */
@@ -1413,8 +1413,8 @@ axis_position_zeroaxis(AXIS_INDEX axis)
     TBOOLEAN is_inside = FALSE;
     AXIS *this = axis_array + axis;
 
-    /* HBB 20020215: correctly treat reversed axes, too! */
-    /* EAM Sep 2005: Nothing wrong with 0 at extreme of the range */
+    /* NB: This is the only place that axis->term_zero is set. */
+    /*     So it is important to reach here before plotting.   */
     if ((this->min > 0.0 && this->max > 0.0)
 	|| this->log) {
 	this->term_zero = (this->max < this->min)
